--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,29 @@ a:hover {
   }
 }
 
+.search-crypto{
+  margin: 20px auto 30px auto;
+  width: 250px;
+}
 
+.crypto-card-container{
+  min-height: 65vh !important;
+}
+
+.crypto-card{
+  min-width: 250px;
+}
+
+.crypto-card .crypto-image{
+  width: 35px;
+}
+
+.home-heading-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+}
 .footer {
   background-color: #001529;
   display: flex;
